# filler

./: CMakeLists.txt  Makefile  README.md  a.out  alikhtor.filler  check  colors.sh  do_in_color.sh  filler.trace  test  test.txt  test1
includes/: filler.h
libftprintf/libft/sources/: ft_strequ.c  get_next_line.c
resources/maps/: map00
sources/: cut_token.c  filler_main.c  initiaize_and_draw.c  main.c  main1.c  secondary_functions.c  surround_enemy.c  token_processing.c
