cmake_minimum_required(VERSION 3.9)
project(filler)

set(CMAKE_CXX_STANDARD 11)

add_executable(filler
        includes/filler.h
        libftprintf/includes/ft_printf.h
        libftprintf/libft/includes/libft.h
        libftprintf/libft/sources/ft_atoi.c
        libftprintf/libft/sources/ft_bzero.c
        libftprintf/libft/sources/ft_isalnum.c
        libftprintf/libft/sources/ft_isalpha.c
        libftprintf/libft/sources/ft_isascii.c
        libftprintf/libft/sources/ft_isdigit.c
        libftprintf/libft/sources/ft_isprint.c
        libftprintf/libft/sources/ft_itoa.c
        libftprintf/libft/sources/ft_lstadd.c
        libftprintf/libft/sources/ft_lstdel.c
        libftprintf/libft/sources/ft_lstdelone.c
        libftprintf/libft/sources/ft_lstiter.c
        libftprintf/libft/sources/ft_lstmap.c
        libftprintf/libft/sources/ft_lstnew.c
        libftprintf/libft/sources/ft_memalloc.c
        libftprintf/libft/sources/ft_memccpy.c
        libftprintf/libft/sources/ft_memchr.c
        libftprintf/libft/sources/ft_memcmp.c
        libftprintf/libft/sources/ft_memcpy.c
        libftprintf/libft/sources/ft_memdel.c
        libftprintf/libft/sources/ft_memmove.c
        libftprintf/libft/sources/ft_memset.c
        libftprintf/libft/sources/ft_putchar.c
        libftprintf/libft/sources/ft_putchar_fd.c
        libftprintf/libft/sources/ft_putendl.c
        libftprintf/libft/sources/ft_putendl_fd.c
        libftprintf/libft/sources/ft_putnbr.c
        libftprintf/libft/sources/ft_putnbr_fd.c
        libftprintf/libft/sources/ft_putstr.c
        libftprintf/libft/sources/ft_putstr_fd.c
        libftprintf/libft/sources/ft_strcat.c
        libftprintf/libft/sources/ft_strchr.c
        libftprintf/libft/sources/ft_strclr.c
        libftprintf/libft/sources/ft_strcmp.c
        libftprintf/libft/sources/ft_strcpy.c
        libftprintf/libft/sources/ft_strdel.c
        libftprintf/libft/sources/ft_strdup.c
        libftprintf/libft/sources/ft_strequ.c
        libftprintf/libft/sources/ft_striter.c
        libftprintf/libft/sources/ft_striteri.c
        libftprintf/libft/sources/ft_strjoin.c
        libftprintf/libft/sources/ft_strlcat.c
        libftprintf/libft/sources/ft_strlen.c
        libftprintf/libft/sources/ft_strmap.c
        libftprintf/libft/sources/ft_strmapi.c
        libftprintf/libft/sources/ft_strncat.c
        libftprintf/libft/sources/ft_strncmp.c
        libftprintf/libft/sources/ft_strncpy.c
        libftprintf/libft/sources/ft_strnequ.c
        libftprintf/libft/sources/ft_strnew.c
        libftprintf/libft/sources/ft_strnstr.c
        libftprintf/libft/sources/ft_strrchr.c
        libftprintf/libft/sources/ft_strsplit.c
        libftprintf/libft/sources/ft_strstr.c
        libftprintf/libft/sources/ft_strsub.c
        libftprintf/libft/sources/ft_strtrim.c
        libftprintf/libft/sources/ft_tolower.c
        libftprintf/libft/sources/ft_toupper.c
        libftprintf/libft/sources/get_next_line.c
        libftprintf/sources/c_mod_part1.c
        libftprintf/sources/d_i_mod_part1.c
        libftprintf/sources/d_i_mod_part2.c
        libftprintf/sources/flags_width_precision.c
        libftprintf/sources/ft_printf.c
        libftprintf/sources/o_mod_part1.c
        libftprintf/sources/s_mod_part1.c
        libftprintf/sources/secondary_functions_part1.c
        libftprintf/sources/secondary_functions_part2.c
        libftprintf/sources/u_mod_part1.c
        libftprintf/sources/x_mod_part1.c
        sources/main1.c)
