cmake_minimum_required(VERSION 3.9)
project(filler)

set(CMAKE_CXX_STANDARD 11)

add_executable(filler
        includes/filler.h
        libftprintf/inc/ft_printf.h
        libftprintf/libft/inc/libft.h
        libftprintf/libft/src/aditional_func/ft_factorial.c
        libftprintf/libft/src/aditional_func/ft_intlen_u.c
        libftprintf/libft/src/aditional_func/ft_is_prime.c
        libftprintf/libft/src/aditional_func/ft_itoa_base_u.c
        libftprintf/libft/src/aditional_func/ft_power.c
        libftprintf/libft/src/aditional_func/ft_print_utf.c
        libftprintf/libft/src/aditional_func/ft_sqrt.c
        libftprintf/libft/src/aditional_func/ft_swap.c
        libftprintf/libft/src/aditional_func/get_next_line.c
        libftprintf/libft/src/lst_func/ft_lstadd.c
        libftprintf/libft/src/lst_func/ft_lstdel.c
        libftprintf/libft/src/lst_func/ft_lstdelone.c
        libftprintf/libft/src/lst_func/ft_lstiter.c
        libftprintf/libft/src/lst_func/ft_lstmap.c
        libftprintf/libft/src/lst_func/ft_lstnew.c
        libftprintf/libft/src/non_standard_func/ft_itoa.c
        libftprintf/libft/src/non_standard_func/ft_memalloc.c
        libftprintf/libft/src/non_standard_func/ft_memdel.c
        libftprintf/libft/src/non_standard_func/ft_putchar.c
        libftprintf/libft/src/non_standard_func/ft_putchar_fd.c
        libftprintf/libft/src/non_standard_func/ft_putendl.c
        libftprintf/libft/src/non_standard_func/ft_putendl_fd.c
        libftprintf/libft/src/non_standard_func/ft_putnbr.c
        libftprintf/libft/src/non_standard_func/ft_putnbr_fd.c
        libftprintf/libft/src/non_standard_func/ft_putstr.c
        libftprintf/libft/src/non_standard_func/ft_putstr_fd.c
        libftprintf/libft/src/non_standard_func/ft_strclr.c
        libftprintf/libft/src/non_standard_func/ft_strdel.c
        libftprintf/libft/src/non_standard_func/ft_strequ.c
        libftprintf/libft/src/non_standard_func/ft_striter.c
        libftprintf/libft/src/non_standard_func/ft_striteri.c
        libftprintf/libft/src/non_standard_func/ft_strjoin.c
        libftprintf/libft/src/non_standard_func/ft_strmap.c
        libftprintf/libft/src/non_standard_func/ft_strmapi.c
        libftprintf/libft/src/non_standard_func/ft_strnequ.c
        libftprintf/libft/src/non_standard_func/ft_strnew.c
        libftprintf/libft/src/non_standard_func/ft_strsplit.c
        libftprintf/libft/src/non_standard_func/ft_strsub.c
        libftprintf/libft/src/non_standard_func/ft_strtrim.c
        libftprintf/libft/src/standard_func/ft_atoi.c
        libftprintf/libft/src/standard_func/ft_bzero.c
        libftprintf/libft/src/standard_func/ft_isalnum.c
        libftprintf/libft/src/standard_func/ft_isalpha.c
        libftprintf/libft/src/standard_func/ft_isascii.c
        libftprintf/libft/src/standard_func/ft_isdigit.c
        libftprintf/libft/src/standard_func/ft_isprint.c
        libftprintf/libft/src/standard_func/ft_memccpy.c
        libftprintf/libft/src/standard_func/ft_memchr.c
        libftprintf/libft/src/standard_func/ft_memcmp.c
        libftprintf/libft/src/standard_func/ft_memcpy.c
        libftprintf/libft/src/standard_func/ft_memmove.c
        libftprintf/libft/src/standard_func/ft_memset.c
        libftprintf/libft/src/standard_func/ft_strcat.c
        libftprintf/libft/src/standard_func/ft_strchr.c
        libftprintf/libft/src/standard_func/ft_strcmp.c
        libftprintf/libft/src/standard_func/ft_strcpy.c
        libftprintf/libft/src/standard_func/ft_strdup.c
        libftprintf/libft/src/standard_func/ft_strlcat.c
        libftprintf/libft/src/standard_func/ft_strlen.c
        libftprintf/libft/src/standard_func/ft_strncat.c
        libftprintf/libft/src/standard_func/ft_strncmp.c
        libftprintf/libft/src/standard_func/ft_strncpy.c
        libftprintf/libft/src/standard_func/ft_strnstr.c
        libftprintf/libft/src/standard_func/ft_strrchr.c
        libftprintf/libft/src/standard_func/ft_strstr.c
        libftprintf/libft/src/standard_func/ft_tolower.c
        libftprintf/libft/src/standard_func/ft_toupper.c
        libftprintf/src/additional_func.c
        libftprintf/src/ft_printf.c
        libftprintf/src/generate_res_func.c
        libftprintf/src/print_res_func_1.c
        libftprintf/src/print_res_func_2.c
        libftprintf/src/read_flags.c
        libftprintf/src/read_n_cast_1.c
        libftprintf/src/read_n_cast_2.c
        libftprintf/src/set_flag_func_1.c
        libftprintf/src/set_flag_func_2.c
        libftprintf/src/set_flag_func_3.c
        libftprintf/src/width_prec_func.c
        sources/cut_token.c
        sources/initiaize_and_draw.c
        sources/filler_main.c
        sources/surround_enemy.c
        sources/token_processing.c)
